samples/ingress/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-sail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-sail
  template:
    metadata:
      labels:
        app: backend-sail
    spec:
      containers:
      - name: backend
        image: inendless/backend:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-sail
spec:
  selector:
    app: backend-sail
  ports:
  - port: 8085
    targetPort: 80
  type: ClusterIP
