samples/ingress/ingress-01.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sail-ingress-01
spec:
  ingressClassName: sail-controller
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-sail
            port:
              number: 8085
