samples/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sail-ingress
  annotations:
    sail.ingress.kubernetes.io/middlewares: |
      - remove-foo  
      - microsoft
spec:
  ingressClassName: sail
  rules:
  - host: zero.dev
    http:
      paths:
      - path: /foo1
        pathType: Prefix
        backend:
          service:
            name: backend-sail
            port:
              number: 8097
